# narrio-dep

./: .dockerignore  .env.example  .env.production  .narrio.yaml  .narrio.yaml.example  .ssr-sources.yaml  .vimsession.vim  BUGFIX-ASR-UPLOAD.md  BUGFIX-LAB-MODE.md  DEBUG-LAB-ERROR.md  Dockerfile  Dockerfile.dev  QUICKSTART-AUDIO.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  how-to-run.md  output.md  pyproject.toml
.narrio/jobs/: 06e81a56-7efd-43e3-9ae4-46049c65e35e.json  1382345d-14cb-46c8-9173-b2c206628970.json  1b2aa54e-3fda-4d09-a523-7d890eec633e.json  21faaf66-b878-4b4a-89a5-d300ba2b9dd8.json  2c25ff17-9786-4b74-85f9-961f4067d2b1.json  39b87a86-9161-4c1d-9d9a-3356b6f5b7c8.json  40cec31e-48dd-41ab-827c-c807c003431e.json  431afaa7-5b58-4c72-a3f6-007c948ae99e.json  58ac1e80-6eea-4c57-8830-3887c3c64df2.json  671a8c1b-b102-4705-a25e-995ada22434a.json  673662e1-1c31-4d3e-a778-8ef59cd2336a.json  6acfcbe5-e118-4233-9e7e-845df896167d.json  6aeb6e5e-6d82-4977-bb7e-c9db036faf02.json  6d285ec4-458d-47bb-8628-47db905da6ca.json  7371316c-0ed5-494a-862a-27a6c4cdca0a.json  7d7dfd4b-03aa-4f31-ac6e-49cfb866231a.json  9143859b-b05a-4bcc-b07e-b03326c79556.json  9ad117a1-3fac-4344-93a2-ad11a76e9df8.json  9c284321-9149-4d04-a149-4afb4a34d523.json  abc72de7-1461-4df8-a134-323e62c314d3.json  ace19d31-3546-4599-9624-c95fef47725c.json  (+6 more)
assets/prompts/: ArticleChunkify.md  (+5 more)
docs/: ASR-WORKFLOW.md  END-TO-END-AUDIO.md  LAB-MODE-GUIDE.md  LAB-MODE-SCREENSHOTS.md  TRANSCRIBE-QUICK-REFERENCE.md  metadesign.md  technical-design.md  tune-command.md
tests/: test_experiment.py
(+100 files in other folders)
