[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "narrio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "websockets>=12.0",
]

[project.scripts]
narrio = "narrio.cli:main"

[tool.setuptools]
packages = ["narrio"]

[tool.setuptools.package-dir]
"" = "src"
